# Retail-Compliance-System

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  openapi.yaml  railway.json  railway.toml
.github/workflows/: ci-cd.yml  ci.yml
.vercel/: repo.json
cmd/server/: main.go
edge-agent/: Dockerfile  README.md  config.example.yaml  pyproject.toml
edge-agent/src/edge/: __init__.py  agent.py  api_client.py  b2_uploader.py  clip_buffer.py  config.py  heartbeat.py  logging_setup.py  pipeline.py  rtsp.py  signaling_client.py  webrtc_publisher.py
edge-agent/src/edge/detectors/: __init__.py  face_arcface.py  objects_yolo.py  person_yolo.py  zone_geometry.py
edge-agent/src/edge/events/: __init__.py  compliance.py  customer.py  operations.py  safety.py  security.py
internal/alerts/: telegram.go  telegram_test.go
internal/api/: auth_handlers.go  camera_handlers.go  identity_handlers.go  integration_test.go  middleware.go  notification_handlers.go  password.go  router.go  router_test.go  staff_handlers.go  validation.go  webrtc_handlers.go
internal/auth/: auth.go  auth_test.go
migrations/: 000_roles_schema.sql  001_core_schema.sql  002_vision_schema.sql  003_identity_schema.sql  004_webrtc_schema.sql  005_notifications_schema.sql  006_event_types_and_retention.sql  007_updated_at_triggers.sql  008_lawful_basis.sql  supabase_full_migration.sql
pkg/database/: tx.go  (+2 more)
web/: index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vercel.json  vite.config.js  vitest.config.js
(+74 files in other folders)
