[project]
name = "watchdog-edge"
version = "0.1.0"
description = "Watch Dog edge agent: on-prem retail CCTV inference + event publisher"
requires-python = ">=3.11"
dependencies = [
  "av>=11.0.0",
  "httpx>=0.27.0",
  "insightface>=0.7.3",
  "numpy>=1.26.0",
  "opencv-python>=4.9.0.80",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "tenacity>=8.3.0",
  "ultralytics>=8.2.0",
  # WebRTC publisher — both lazy-imported so the agent still boots
  # on hosts where the C-extension wheel failed to install.
  "aiortc>=1.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21.0",
  "ruff>=0.4.0",
]
# Lightweight subset used in CI for non-GPU unit tests (excludes ultralytics,
# insightface, aiortc). Tests that need them are marked and skipped.
ci = [
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "tenacity>=8.3.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "gpu: tests that need GPU/ML libraries (ultralytics, insightface)",
  "rtsp: tests that need a live RTSP source",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]